did the game page and added audio folder with 4 files in it

--- a/Follow-The-Voice/style/how-to-play.css
+++ b/Follow-The-Voice/style/how-to-play.css
@@ -62,6 +62,14 @@ a {
     text-decoration: none;
 }
 
+#pause-button {
+    color: red;
+}
+
+#resume-button {
+    color: green;
+}
+
 #last-next,
 #first-previous {
     color: black;
