--- a/Follow-The-Voice/style/style.css
+++ b/Follow-The-Voice/style/style.css
@@ -83,4 +83,5 @@ button {
     margin: 10% 10% 10% 10%;
     display: flex;
     justify-content: center;
+    font-family: 'Quicksand', sans-serif;
 }
